# jsonrpc-rust-client

./: .travis.yml  Cargo.toml  README.md
examples/: hello_world.rs
src/: client.rs  lib.rs  version.rs
tests/: jsonrpc_calls.rs
