[package]
name = "jsonrpc_client"
version = "0.2.0"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
    "Lucas Soriano del Pino <lucas.soriano@coblox.tech>",
]
description = "Client library for talking to JsonRPC APIs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coblox/jsonrpc_rust_client"
categories = ["network-programming", "web-programming::http-client"]
keywords = ["jsonrpc", "http", "client"]

[dependencies]
reqwest = "0.9"
serde_json = "1"
serde_derive = "1"
serde = "1"
log = "0.4"

[dev-dependencies]
spectral = "0.6"
jsonrpc-http-server = "8"
jsonrpc-core = "8"
env_logger = "0.5"
