[package]
name = "jsonrpc_client"
version = "0.2.1"
authors = [
    "CoBloX Team <team@coblox.tech>"
]
description = "Client library for talking to JsonRPC APIs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coblox/jsonrpc_rust_client"
categories = ["network-programming", "web-programming::http-client"]
keywords = ["jsonrpc", "http", "client"]

[dependencies]
log = "0.4"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
env_logger = "0.7"
jsonrpc-http-server = "13"
spectral = "0.6"
